k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-rancher-exporter-deployment
  namespace: prometheus
  labels:
    app: prometheus-rancher-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-rancher-exporter
  template:
    metadata:
      labels:
        app: prometheus-rancher-exporter
    spec:
      containers:
        - name: prometheus-rancher-exporter
          image: git.url:5050/datacenter/cod-linux/rancher_exporter:latest
          ports:
            - name: 8003tcp02
              containerPort: 8003
              protocol: TCP
          resources:
            limits:
              cpu: '2'
              memory: 1024Mi
            requests:
              cpu: '1'
              memory: 128Mi
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      affinity: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
