k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-rancher-exporter-service
  namespace: prometheus
spec:
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  selector:
    app: prometheus-rancher-exporter
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
